# singtown-ai-trainer-base

./: .dockerignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
envs/singtown-ai-onnx2tf/: pyproject.toml
envs/singtown-ai-rknn2/: pyproject.toml
